# nwtech_tools

./: .gitignore  README.MD  pyproject.toml  requirements.txt  run.py
src/: main.py
src/gui/: main_window.py
src/modules/: admin_helper.py  backup_manager.py  winget_manager.py
